# AlgoFun

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
Algorithms/: CMakeLists.txt
Algorithms/src/: algorithmsPCH.hpp  algorithms_Test.cpp
Algorithms/src/AlgoFun/: AlgoFindMissingElem.hpp  AlgoFun.cpp  AlgoFun.hpp  GatherAlgorithm.hpp  SlideAlgorithm.hpp  SortSubRange.cpp  SortSubRange.hpp  StablePartitionPosition.hpp  accumulate_iter.hpp  accumulate_n.hpp  algoConcepts.hpp  anyof.hpp  anyofFast.hpp  fold_left.hpp  reduce_par.hpp  stable_partitionPos.hpp  stable_partitionUserBuffer.hpp
cmake/: warnings.cmake
